clusters/apps/env/production/auth-system/authentik/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`sso.${SECRET_DOMAIN}`)"
      middlewares:
        - name: l5d-authentik-middleware
          namespace: auth-system
      services:
        - name: authentik
          port: 80
  tls:
    secretName: crj-wildcard-certificate
    domains:
      - main: sso.${SECRET_DOMAIN}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: l5d-authentik-middleware
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "authentik.auth-system.svc.cluster.local:80"
